--- a/FINAL_PROJECTS.html
+++ b/FINAL_PROJECTS.html
@@ -318,7 +318,10 @@ div.tocify {
       <a href="LECTURE9.html">Small population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE10.html">Declining population paradigm</a>
+      <a href="LECTURE10.html">Individual-based models</a>
+    </li>
+    <li>
+      <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
   </ul>
 </li>
@@ -389,7 +392,7 @@ div.tocify {
 <h2>Timeline</h2>
 <ul>
 <li><strong>PROPOSAL:</strong> Due March 3!</li>
-<li><strong>PVA FULLY PARAMETERIZED</strong> Due March 24: description of how your PVA model works and where the parameter estimates come from.</li>
+<li><strong>PVA FULLY PARAMETERIZED</strong> Due March 31: description of how your PVA model works and where the parameter estimates come from.</li>
 <li><strong>DRAFT FINAL PAPER:</strong> Due April 14</li>
 <li><strong>FINAL FINAL PAPER:</strong> Due May 5</li>
 <li><strong>FINAL PRESENTATIONS:</strong> May 5 in lab</li>
@@ -409,16 +412,12 @@ div.tocify {
 </li>
 <li><strong>Data sources</strong>: Describe what data/information sources you plan to use to guide PVA construction and parameterization. Convince your instructors that your project is <strong>possible</strong>!</li>
 </ol>
-<p><strong>NOTE about data sources:</strong> The most important parameters you need for a PVA model are <em>survival rates</em> (usually age-structured), <em>fecundity rates</em> (often age-structured as well), <em>stochasticity</em> (variability in those vital rates), <em>abundance</em>, and <em>carrying capacity</em>. We have gone over all these concepts in class already- PVA is just a way of putting all these concepts together in a single model! You can either get these parameter estimates directly from the published literature (or unpublished reports), or you estimate these parameters yourself using raw data (which we haven’t yet gone over in class). If all else fails, you can use published records for similar species!</p>
+<p><strong>NOTE about data sources:</strong> The most important parameters you need for a PVA model are <em>survival rates</em> (usually age-structured), <em>fecundity rates</em> (often age-structured as well), <em>stochasticity</em> (variability in those vital rates), <em>abundance</em>, <em>dispersal rates</em>, and <em>carrying capacity</em>. We have gone over all these concepts in class already- PVA is just a way of putting all these concepts together in a single model! You can either get these parameter estimates directly from the published literature (or unpublished reports), or you estimate these parameters yourself using raw data (which we haven’t yet gone over in class). If all else fails, you can use published records for similar species!</p>
 </div>
 <div id="potentially-useful-links" class="section level2">
 <h2>Potentially useful links!</h2>
-</div>
-<div id="data-links" class="section level1">
-<h1>Data links</h1>
-<div id="publicly-available-datasets-potentially-for-final-project" class="section level2">
-<h2>Publicly available datasets, potentially for final project…</h2>
-<p>(many links courtesy Tom Langen)</p>
+<p>Publicly available datasets, potentially for final project…<br />
+(many links courtesy Tom Langen)</p>
 <div id="biodiversity-data-clearinghouses-archives" class="section level3">
 <h3>BIODIVERSITY DATA CLEARINGHOUSES /ARCHIVES</h3>
 <p><a href="http://www.iucnredlist.org/">International Union for the Conservation of Nature (IUCN) Redlist</a> (Searchable list of the world’s threatened and endangered plants and animal species on the IUCN Redlist.)</p>
@@ -466,7 +465,6 @@ div.tocify {
 <p><a href="http://knb.ecoinformatics.org/knb/style/skins/nceas/index.jsp">National Center for Ecological Assessment &amp; Synthesis (NCEAS) Data Repository</a> (Data archive of contributed data sets of all types of ecological data.)</p>
 <p><a href="http://www.nceas.ucsb.edu/scicomp/">NCEAS Scientific Computing Database</a> (Clearinghouse of climatological, geospatial, and other data. Also has shareware software for analysis.)</p>
 <p>[Additional instructions coming soon!]</p>
-</div>
 </div>
 </div>
 
