--- a/INTRO.html
+++ b/INTRO.html
@@ -317,7 +317,10 @@ div.tocify {
       <a href="LECTURE9.html">Small population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE10.html">Declining population paradigm</a>
+      <a href="LECTURE10.html">Individual-based models</a>
+    </li>
+    <li>
+      <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
   </ul>
 </li>
