--- a/LAB5.html
+++ b/LAB5.html
@@ -318,7 +318,10 @@ div.tocify {
       <a href="LECTURE9.html">Small population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE10.html">Declining population paradigm</a>
+      <a href="LECTURE10.html">Individual-based models</a>
+    </li>
+    <li>
+      <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
   </ul>
 </li>
@@ -424,7 +427,7 @@ div.tocify {
 <p>The next three questions relate to comparing these two methods:</p>
 <p>1c. Try both of these methods a few times. What difference(s) do you notice between these two methods? Explain your answer.</p>
 <p>1d. Use the “Sensitivity Testing” tool (in the “Tools” menu, upper right corner) to run the model 50 times using each of the two methods described above. Choose [Population] as the “Monitored Primitive” (otherwise use the default settings). Run the sensitivity testing module (using the “Run Analysis” button) and provide these two resulting plots as part of your write-up (one plot for each of the two methods). Look at the range of final abundances in the two plots. Which method results in the greatest uncertainty about the final abundance (after 10 years)? Can you explain this difference? (this last part is challenging, but give it a try!).</p>
-<p>1e. Let’s think through the problem one more time- we are uncertain about the <em>true</em> value of the per-capita birth rate, , <span class="math inline">\(b\)</span>, for a rare species. The birth rate could be anything from 0.2 to 0.5 - we really can’t say! Given this uncertainty, we want to know <em>what the abundance will be after 10 years</em>. If you were tasked with evaluating this question, which of the two plots you generated in (1d) would be most appropriate for answering this question? Why?</p>
+<p>1e. Let’s think through the problem one more time- we are uncertain about the <em>true</em> value of the per-capita birth rate, <span class="math inline">\(b\)</span>, for a rare species. The birth rate could be anything from 0.2 to 0.5 - we really can’t say! Given this uncertainty, we want to know <em>what the abundance will be after 10 years</em>. If you were tasked with evaluating this question, which of the two plots you generated in (1d) would be most appropriate for answering this question? Why?</p>
 </div>
 <div id="exercise-2-demographic-and-environmental-stochasticity" class="section level2">
 <h2>Exercise 2: Demographic and Environmental Stochasticity</h2>
