--- a/LECTURE11.html
+++ b/LECTURE11.html
@@ -12,7 +12,7 @@
 <meta name="author" content="NRES 470/670" />
 
 
-<title>Passenger Pigeon/Allee effect</title>
+<title>Declining-population paradigm</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -367,96 +367,95 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Passenger Pigeon/Allee effect</h1>
+<h1 class="title toc-ignore">Declining-population paradigm</h1>
 <h4 class="author"><em>NRES 470/670</em></h4>
-<h4 class="date"><em>Feb 1, 2017</em></h4>
+<h4 class="date"><em>Mar 6, 2017</em></h4>
 
 </div>
 
 
-<div id="allee-effect" class="section level2">
-<h2>Allee Effect</h2>
+<p><strong>Q</strong>: Is the intrinsic rate of growth <span class="math inline">\(r_{max}\)</span> positive or negative for most species on earth? Why???</p>
+<p><strong>Q</strong>: Given that most species are capable of sustained growth and attaining large population size under favorable conditions, how do populations get small in the first place? Why are some populations declining despite the intrinsic ability to grow?</p>
+<div id="threats-to-populations" class="section level2">
+<h2>Threats to populations</h2>
+<p>The answer of course is that the intrinsic ability to grow is not the whole story. Populations are stocks with inflows and outflows- and if mortalities exceed births <em>under present conditions</em> the population will decline.</p>
+<p>In the “small-population paradigm” lecture we discussed several <strong>stochastic threats</strong> to populations, including loss of genetic diversity (genetic drift), demographic stochasticity, catastrophic environmental events. These threats only really affect small populations. Large populations are mostly resilient to stochastic threats.</p>
+<p>Large populations can be threatened though! Factors that threaten large populations are usually <strong>deterministic</strong>!</p>
+<p>The <strong>declining population paradigm</strong> focuses on the factors that make large populations small – that is, it is the <em>study of those deterministic processes that cause population decline, and how these processes may be reversed through effective conservation management</em>.</p>
+<p>What are some factors that can <em>tip the balance</em> so to speak- so that growing or stable populations become declining populations?</p>
+<div id="harvest" class="section level3">
+<h3>Harvest</h3>
 <div class="figure">
-<img src="prairie_dogs3.jpg" />
+<img src="overharvest1.jpg" />
 
 </div>
-<p>What happens if density dependence goes the other way? What if an decrease in density changes vital rates to produce an <em>decrease</em> in the population growth rate <em>r</em>?</p>
-<p>Imagine a very social species, like prairie dogs. If the density is high, they can warn each other about predators. If the density is low, the predation rate might go up, resulting in higher <em>d</em>. This is a positive feedback, and can result in, well, you should simulate it for yourself! But remember, positive feedbacks generally result in unstable or non-regulated systems!</p>
-<p>This effect – whereby population growth rate may <strong>decrease</strong> when population size decreases – is called an <strong>Allee effect</strong>, named after ecologist <a href="https://en.wikipedia.org/wiki/Warder_Clyde_Allee">Warder Clyde Allee</a> (1885-1955). Allee specialized in social behavior and aggregations, and recognized the benefits of social aggregations to individual fitness.</p>
-<p>Interestingly, Allee’s interest in cooperation and the benefits of social aggregations spilled over into his life in other ways. He was an anti-war activist!</p>
+</div>
+<div id="habitat-loss" class="section level3">
+<h3>Habitat loss</h3>
 <div class="figure">
-<img src="Allee1.jpg" />
+<img src="habitatloss1.jpg" />
 
 </div>
-<p>One of the most famous examples of a possible Allee effect involves the passenger pigeon (<em>Ectopistes migratorius</em>).</p>
+</div>
+<div id="disease" class="section level3">
+<h3>Disease</h3>
 <div class="figure">
-<img src="PP2.jpg" />
+<img src="whitenose1.jpg" />
 
 </div>
-<p>The <a href="https://en.wikipedia.org/wiki/Passenger_pigeon">passenger pigeon</a> was one of the most abundant birds in North America. Some estimate that the total species abundance may have been over three <em>billion</em>!</p>
-<p>Aldo Leopold once said,</p>
+</div>
+<div id="climate-change" class="section level3">
+<h3>Climate change</h3>
+<div class="figure">
+<img src="climatechange1.jpg" />
+
+</div>
+</div>
+<div id="invasive-species" class="section level3">
+<h3>Invasive species</h3>
+<div class="figure">
+<img src="bullfrog1.jpg" />
+
+</div>
+</div>
+<div id="pollution" class="section level3">
+<h3>Pollution</h3>
+<div class="figure">
+<img src="pollution1.png" />
+
+</div>
+</div>
+</div>
+<div id="the-controversy-in-conservation-biology" class="section level2">
+<h2>The controversy in Conservation Biology!</h2>
+<p>So, which one is more important for conservation? The declining-population paradigm or the small-population paradigm??</p>
+<p>This “controversy” was ignited by a very influential paper by Graeme Caughley in <em>Journal of Animal Ecology</em> in 1994.</p>
+<div class="figure">
+<img src="caughley1.jpg" />
+
+</div>
+<p>In this paper, Caughley defines the two competing paradigms, and expresses a bias towards one and against the other…</p>
 <blockquote>
-<p>“Men still live who, in their youth, remember pigeons; trees still live who, in their youth, were shaken by a living wind. But a few decades hence only the oldest oaks will remember, and at long last only the hills will know.” —Aldo Leopold, “On a Monument to the Pigeon,” 1947</p>
+<p>Conservation biology has two threads: the small-population paradigm which deals with the effect of smallness on the persistence of a population, and the declining- population paradigm which deals with the cause of smallness and its cure.</p>
 </blockquote>
-<p>What happened to the passenger pigeon? Well, first of all pigeons were hunted on a massive scale using wasteful methods.</p>
-<div class="figure">
-<img src="PP1.jpg" />
-
-</div>
-<p>Secondly, hardwood forests were cleared on a massive scale, reducing habitat.</p>
-<p>But what do passenger pigeons have to do with the Allee effect? Well, they were an <em>extremely</em> gregarious species. Once their numbers dwindled (due to hunting and clearcutting) their social systems broke down, and they could no longer effectively reproduce or avoid predators.</p>
-</div>
-<div id="in-class-exercise-allee-effect" class="section level2">
-<h2>In-class exercise: Allee effect</h2>
-<p>In this exercise we will explore the implications of <strong>postitive density dependence</strong> on vital rates.</p>
-<ol style="list-style-type: decimal">
-<li>In InsightMaker, load up the logistic model with vital rates – that is, where <span class="math inline">\(b\)</span> and <span class="math inline">\(d\)</span> are each modeled density-dependent. It should look something like this (or if you don’t already have this, load it from <a href="https://insightmaker.com/insight/70353/Logistic-Growth-1#">here</a>):</li>
-</ol>
+<p><strong>Q</strong>: Can you detect Caughley’s bias in the above quote?</p>
+<p><strong>Q</strong>: What do you think? Do you agree with Caughley?</p>
+<div id="in-class-exercise-deterministic-threats" class="section level3">
+<h3>In-Class Exercise: Deterministic threats</h3>
+<p>Let’s try a worked example to illustrate the above points.</p>
+<p>Let’s start with a basic scalar, density-dependent population, that should look something like this:</p>
 <div class="figure">
 <img src="IM5.jpg" />
 
 </div>
-<ol start="2" style="list-style-type: decimal">
-<li><p>Now add a new [Variable] called <em>Allee threshold</em>. Set this variable equal to 200.</p></li>
-<li><p>As for the other parameters, set them as follows:</p></li>
+<p>Let’s add a harvest process!</p>
+<ol style="list-style-type: decimal">
+<li></li>
 </ol>
-<ul>
-<li>Initial abundance: 201 (just above the Allee threshold)</li>
-<li>Density dependence on birth rate: 0.004<br />
-</li>
-<li>Density dependence on survival: 0.001<br />
-</li>
-<li>Max birth rate: 0.8<br />
-</li>
-<li>Min mortality: 0.3</li>
-</ul>
-<ol start="4" style="list-style-type: decimal">
-<li>Now let’s use a <em>Conditional (IF-THEN-ELSE) statement</em> to specify an Allee effect. The population experiences maximum growth rate at the Allee threshold. If the population is above the Allee threshold, the population exhibits (stabilizing) negative density dependence. If the population is below the Allee threshold, then the population experiences positive density dependence- whereby individuals in smaller populations have <em>lower</em> overall fitness.</li>
-</ol>
-<p>To do this, define your <em>Births per Capita</em> using the following syntax:</p>
-<pre><code>If [Pigeons]&lt;[Allee threshold] Then
-  [Max fecundity]-[Density dependence on fecundity]*([Allee threshold]-[Pigeons])
-Else
-  [Max fecundity]-[Density dependence on fecundity]*([Pigeons]-[Allee threshold])
-End If</code></pre>
-<p>Similarly, define your <em>Deaths per capita</em> using the following syntax:</p>
-<pre><code>If [Pigeons]&lt;[Allee threshold] Then
-  [Min mortality]+[Density dependence on survival]*([Allee threshold]-[Pigeons])
-Else
-  [Min mortality]+[Density dependence on survival]*([Pigeons]-[Allee threshold])
-End If</code></pre>
-<ol start="5" style="list-style-type: decimal">
-<li>If we are running out of time in class (which we probably will be!), load the model (and clone it!) using <a href="https://insightmaker.com/insight/71147/Allee-Effect-1#">this link</a>!</li>
-</ol>
-<p>Now you can try to answer the following questions:</p>
-<p><strong>Q</strong>: What is the carrying capacity (K) for this population?</p>
-<p><strong>Q</strong>: Carrying capacity (K) represents one equilibrium point in this model. Try to find another equilibrium point- that is, a point where the population neither grows nor declines.</p>
-<p><strong>Q</strong>: is this equilibrium a <em>stable equilibrium</em> or an <em>unstable equilibrium</em>?</p>
-<p><strong>Q</strong>: if you plot birth and death rates as a function of density in this model, can you identify the two equilibria?</p>
-<p><strong>Q:</strong> Why do Allee effects generally spell bad news for wildlife conservation and management?</p>
-<p>And just for fun, here is an article about <a href="http://www.audubon.org/magazine/may-june-2014/why-passenger-pigeon-went-extinct">the passenger pigeon and its possible “de-extinction”</a></p>
-<p><strong>Q:</strong> Do you support bringing back the passenger pigeon? Why or why not??</p>
-<p><a href="LECTURE6.html">–go to next lecture–</a></p>
+<p>Let’s add a habitat loss process!</p>
+<p>Let’s add a …</p>
+<p><a href="LECTURE12.html">–go to next lecture–</a></p>
+</div>
 </div>
 
 
