--- a/schedule.html
+++ b/schedule.html
@@ -221,7 +221,10 @@ $(document).ready(function () {
       <a href="LECTURE9.html">Small population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE10.html">Declining population paradigm</a>
+      <a href="LECTURE10.html">Individual-based models</a>
+    </li>
+    <li>
+      <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
   </ul>
 </li>
@@ -378,13 +381,13 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left">Week 6</td>
 <td align="left">2/28/2017</td>
-<td align="left">LECTURE 1: Stochasticity / Small population paradigm</td>
+<td align="left">LECTURE 1: Stochasticity and Uncertainty / Small population paradigm</td>
 <td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/2/2017</td>
-<td align="left">LECTURE 2: Small population paradigm / Population Viability Analysis (PVA)</td>
+<td align="left">LECTURE 2: Small population paradigm</td>
 <td align="left"><a href="beissinger1.pdf">Beissinger and Westphal 1998</a></td>
 </tr>
 <tr class="even">
@@ -396,73 +399,73 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left">Week 7</td>
 <td align="left">3/7/2017</td>
-<td align="left">LECTURE 1: Mitigating threats to populations: “declining population paradigm”</td>
-<td align="left"><a href="caughley1.pdf">Caughley 1988</a></td>
+<td align="left">LECTURE 1: Individual based models</td>
+<td align="left">BCTD Chapter 10</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/9/2017</td>
-<td align="left">LECTURE 2: Metapopulations</td>
-<td align="left">Gotelli Chapter 4</td>
+<td align="left">LECTURE 2: Declining population paradigm / Population Viability Analysis (PVA)</td>
+<td align="left"><a href="caughley1.pdf">Caughley 1988</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/10/2017</td>
-<td align="left">LAB: Metapopulation modeling in InsightMaker</td>
+<td align="left">LAB: Work on group PVA projects</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 8</td>
 <td align="left">3/14/2017</td>
-<td align="left">LECTURE 1: Data needs for population ecology: Presence-absence data, presence-only data.</td>
-<td align="left">Mackenzie 2005</td>
+<td align="left">LECTURE 1: PVA / Metapopulations</td>
+<td align="left">Gotelli Chapter 4</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/16/2017</td>
-<td align="left">LECTURE 2: Site-occupancy models</td>
-<td align="left">Knapp et al. 2003</td>
+<td align="left">LECTURE 2: Metapopulations</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/17/2017</td>
-<td align="left">LAB: Metapopulation modeling in InsightMaker (continued)</td>
+<td align="left">LAB: Metapopulation modeling in InsightMaker</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 9</td>
 <td align="left">3/21/2017</td>
-<td align="left">LECTURE 1: Modeling habitat suitability: species distribution models</td>
-<td align="left">Elith and Leathwick. 2009</td>
+<td align="left">SPRING BREAK</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/23/2017</td>
-<td align="left">LECTURE 2: Modeling habitat: defining patches and populations</td>
-<td align="left">Larson et al. 2004</td>
+<td align="left">“</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/24/2017</td>
-<td align="left">LAB: Group projects (instructors away- grad student will be present)</td>
+<td align="left">“</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 10</td>
 <td align="left">3/28/2017</td>
-<td align="left">LECTURE 1: Estimating and modeling dispersal processes</td>
+<td align="left">LECTURE 1: Dispersal</td>
 <td align="left">Frair et al 2008</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/30/2017</td>
-<td align="left">LECTURE 2: MIDTERM #2</td>
-<td align="left">Trakhtenbrot et al. 2005</td>
+<td align="left">LECTURE 2: Estimating and modeling dispersal processes</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/31/2017</td>
-<td align="left">LAB: Species Distribution Modeling in R. Defining habitat. Cross-validation</td>
+<td align="left">LAB: Final projects (PVA models due)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
@@ -474,8 +477,8 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">4/6/2017</td>
-<td align="left">LECTURE 2: The evolutionary context: life-history theory.</td>
-<td align="left"></td>
+<td align="left">LECTURE 2: MIDTERM #2</td>
+<td align="left">BCTD Chapter 10</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
@@ -522,7 +525,7 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left">Week 14</td>
 <td align="left">4/25/2017</td>
-<td align="left">LECTURE 1: Case study: assessing the species-level impact of climate change</td>
+<td align="left">LECTURE 1: Case study: modeling tortoise repatriation in Galapagos</td>
 <td align="left">Pearson and Dawson (2003)</td>
 </tr>
 <tr class="odd">
@@ -574,7 +577,13 @@ $(document).ready(function () {
                   sensitivity and elasticity lab?                                                                                                                             
                   PVA1: Density-regulated, age-structured, stochastic population model                                                                                        
                                                                                                                                                                               
-                  LECTURE 1: Detecting density dependence in natural populations                                              [Brook et al. 2006](brook1.pdf)                 </code></pre>
+                  LECTURE 1: Detecting density dependence in natural populations                                              [Brook et al. 2006](brook1.pdf)                 
+                  Data needs for population ecology: Presence-absence data, presence-only data.                               Mackenzie 2005                                  
+                                                                                                                              Elith and Leathwick. 2009                       
+                  The evolutionary context: life-history theory.                                                              Larson et al. 2004                              
+                  Species Distribution Modeling in R. Defining habitat. Cross-validation                                                                                      
+                                                                                                                              Trakhtenbrot et al. 2005                        
+                                                                                                                              Knapp et al. 2003                               </code></pre>
 
 
 
