--- a/LECTURE10.html
+++ b/LECTURE10.html
@@ -12,7 +12,7 @@
 <meta name="author" content="NRES 470/670" />
 
 
-<title>Passenger Pigeon/Allee effect</title>
+<title>Intro to individual-based models (IBM)</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -367,96 +367,113 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Passenger Pigeon/Allee effect</h1>
+<h1 class="title toc-ignore">Intro to individual-based models (IBM)</h1>
 <h4 class="author"><em>NRES 470/670</em></h4>
-<h4 class="date"><em>Feb 1, 2017</em></h4>
+<h4 class="date"><em>Mar 6, 2017</em></h4>
 
 </div>
 
 
-<div id="allee-effect" class="section level2">
-<h2>Allee Effect</h2>
 <div class="figure">
-<img src="prairie_dogs3.jpg" />
+<img src="birds1.jpg" />
 
 </div>
-<p>What happens if density dependence goes the other way? What if an decrease in density changes vital rates to produce an <em>decrease</em> in the population growth rate <em>r</em>?</p>
-<p>Imagine a very social species, like prairie dogs. If the density is high, they can warn each other about predators. If the density is low, the predation rate might go up, resulting in higher <em>d</em>. This is a positive feedback, and can result in, well, you should simulate it for yourself! But remember, positive feedbacks generally result in unstable or non-regulated systems!</p>
-<p>This effect – whereby population growth rate may <strong>decrease</strong> when population size decreases – is called an <strong>Allee effect</strong>, named after ecologist <a href="https://en.wikipedia.org/wiki/Warder_Clyde_Allee">Warder Clyde Allee</a> (1885-1955). Allee specialized in social behavior and aggregations, and recognized the benefits of social aggregations to individual fitness.</p>
-<p>Interestingly, Allee’s interest in cooperation and the benefits of social aggregations spilled over into his life in other ways. He was an anti-war activist!</p>
+<p>So far in this class we have looked at the <strong>population</strong> as the fundamental unit that we are interested in modeling. This makes sense for a population ecology class! But we are all aware that populations consist of <strong>individuals</strong> that are semi-autonomous. Sometimes the questions we want to ask in ecology and conservation biology require us to zoom in on the processes that are occurring at the <em>individual level</em>.</p>
+<p>In some ways a population is hard to define- it can be a bit of an artificial concept. The individual is (mostly) a straightforward, biologically meaningful concept.</p>
+<p>Before we define how individual-based models differ from the population-level stock-flow models we have already been using, let’s first point out the similarities.</p>
+<p>First of all, the basic modeling workflow is ALWAYS the same, no matter what kind of model we want to use!</p>
 <div class="figure">
-<img src="Allee1.jpg" />
+<img src="model_wkflow1.jpg" />
 
 </div>
-<p>One of the most famous examples of a possible Allee effect involves the passenger pigeon (<em>Ectopistes migratorius</em>).</p>
+<p>All models are a way to <strong>formalize our understanding about our study system</strong>.</p>
+<p><strong>Population-based models</strong> (PBM; i.e., models of <span class="math inline">\(N\)</span>) are the main type of model we consider in this class- because it is the most direct way to think about population dynamics: <span class="math inline">\(N\)</span> is our main variable of interest, and it is controlled by intrinsic (e.g., density-dependence, demographic stochasticity) and extrinsic (e.g., environmental stochasticity, harvest) factors.</p>
+<p><strong>Age/stage structured population-based models</strong> and <strong>sex structured population models</strong> (i.e., models of <span class="math inline">\(\mathbf{N}\)</span>, i.e., vector-structured <span class="math inline">\(N\)</span>) are a type of population model in which individuals are grouped together according to important traits like sex and age, with distinct population vital rates assigned to each group.</p>
+<p><strong>Individual-based models</strong> (IBM; also known as “agent-based” models) is a way of modeling populations such that all individuals are considered explicitly! We no longer need to put individuals into groups- each individual can potentially have a different survival probability, or chance of breeding, or movement propensity! In this case, we don’t model <span class="math inline">\(N\)</span> directly at all – in fact, <span class="math inline">\(N\)</span> is an <strong>emergent property</strong> of individual organisms interacting with each other, with predators and competitors, and with their abiotic environment.</p>
+<div id="which-model-structure-should-i-use-ibm-or-pbm" class="section level3">
+<h3>Which model structure should I use? IBM or PBM??</h3>
+<p>In general, models are tools- you should use the model structure that best fits with the questions you are asking and your understanding of the study system!</p>
+<p>And also, if two different model structures are equally appropriate, you should usually use the <strong>simplest approach</strong>! This idea is often called the <em>Principle of Parsimony</em> (or, <em>Occam’s Razor</em>).</p>
+<p><strong>Q</strong>: All populations are composed of individuals. Why then don’t we always model populations using individual-based models?</p>
 <div class="figure">
-<img src="PP2.jpg" />
+<img src="occam1.jpg" />
 
 </div>
-<p>The <a href="https://en.wikipedia.org/wiki/Passenger_pigeon">passenger pigeon</a> was one of the most abundant birds in North America. Some estimate that the total species abundance may have been over three <em>billion</em>!</p>
-<p>Aldo Leopold once said,</p>
-<blockquote>
-<p>“Men still live who, in their youth, remember pigeons; trees still live who, in their youth, were shaken by a living wind. But a few decades hence only the oldest oaks will remember, and at long last only the hills will know.” —Aldo Leopold, “On a Monument to the Pigeon,” 1947</p>
-</blockquote>
-<p>What happened to the passenger pigeon? Well, first of all pigeons were hunted on a massive scale using wasteful methods.</p>
-<div class="figure">
-<img src="PP1.jpg" />
-
+<p><strong>Q</strong>: What are some questions that might be best addressed using <strong>individual-based models (IBM)</strong>?</p>
+<p><strong>Q</strong>: What are some questions that might be best addressed using <strong>population-based models (PBM)</strong>?</p>
+<p><em>Individual-based models are powerful- but with power comes great responsibility!</em></p>
 </div>
-<p>Secondly, hardwood forests were cleared on a massive scale, reducing habitat.</p>
-<p>But what do passenger pigeons have to do with the Allee effect? Well, they were an <em>extremely</em> gregarious species. Once their numbers dwindled (due to hunting and clearcutting) their social systems broke down, and they could no longer effectively reproduce or avoid predators.</p>
-</div>
-<div id="in-class-exercise-allee-effect" class="section level2">
-<h2>In-class exercise: Allee effect</h2>
-<p>In this exercise we will explore the implications of <strong>postitive density dependence</strong> on vital rates.</p>
-<ol style="list-style-type: decimal">
-<li>In InsightMaker, load up the logistic model with vital rates – that is, where <span class="math inline">\(b\)</span> and <span class="math inline">\(d\)</span> are each modeled density-dependent. It should look something like this (or if you don’t already have this, load it from <a href="https://insightmaker.com/insight/70353/Logistic-Growth-1#">here</a>):</li>
-</ol>
-<div class="figure">
-<img src="IM5.jpg" />
-
-</div>
-<ol start="2" style="list-style-type: decimal">
-<li><p>Now add a new [Variable] called <em>Allee threshold</em>. Set this variable equal to 200.</p></li>
-<li><p>As for the other parameters, set them as follows:</p></li>
-</ol>
+<div id="demo-individual-based-models" class="section level2">
+<h2>Demo: Individual-based models!</h2>
+<p>The goal of this activity is to build a mechanistic, individual-based model (IBM) of a (made-up) ecological system.</p>
+<div id="the-scenario" class="section level3">
+<h3>The scenario</h3>
+<p>The laphlag island archipelago is famous for its dramatic slopes, lush green grass, and its native sheep, the laphlag island bighorn. About 50 years ago, the native island wolf population was hunted to extinction by ranchers, to prevent any wolf predation on their precious livestock.</p>
+<p>However, without wolves, populations of the native sheep skyrocketed, and the famous lush green grass is quickly being lost to overgrazing by the native sheep.</p>
+<p>The locals now realize: <em>They need to reintroduce wolves to the islands</em>!</p>
+<p>You have been hired as a research ecologist to help the locals and biologists address the following questions:</p>
 <ul>
-<li>Initial abundance: 201 (just above the Allee threshold)</li>
-<li>Density dependence on birth rate: 0.004<br />
-</li>
-<li>Density dependence on survival: 0.001<br />
-</li>
-<li>Max birth rate: 0.8<br />
-</li>
-<li>Min mortality: 0.3</li>
+<li><p>How are reintroduced wolves going to affect grass biomass and distribution?</p></li>
+<li><p>How many wolves are needed to effectively restore lush green grass to the islands?</p></li>
 </ul>
-<ol start="4" style="list-style-type: decimal">
-<li>Now let’s use a <em>Conditional (IF-THEN-ELSE) statement</em> to specify an Allee effect. The population experiences maximum growth rate at the Allee threshold. If the population is above the Allee threshold, the population exhibits (stabilizing) negative density dependence. If the population is below the Allee threshold, then the population experiences positive density dependence- whereby individuals in smaller populations have <em>lower</em> overall fitness.</li>
+<p>The local management agency is about to start an experimental wolf reintroduction, but they want to know what to expect before making the final decision to go ahead with it.</p>
+<p>They give you some information to get a first guess but promise that you’ll be able to come study the experimental setup once it’s underway.</p>
+<p>The hypothesis is that presence of wolves affects sheep population and behavior in such a way that grass growth is promoted.</p>
+<div class="figure">
+<img src="sheep1.png" />
+
+</div>
+</div>
+<div id="the-details" class="section level3">
+<h3>The details!</h3>
+<p>The enclosure is deployed after the breeding season and the experiment is run for 100 days.</p>
+<div id="sheep" class="section level4">
+<h4>Sheep</h4>
+<ul>
+<li>There are a total of 50 sheep in the experimental enclosure</li>
+<li>Each sheep eats 0.2 units of grass per day</li>
+<li>Each sheep gives birth to 3 lambs approximately every 20 days of the experiment.</li>
+<li>Sheep tend to stay in place unless either they run out of food to eat or there is a wolf in the vicinity</li>
+</ul>
+</div>
+<div id="wolves" class="section level4">
+<h4>Wolves</h4>
+<ul>
+<li>There are a total of 5 wolves in the experimental enclosure</li>
+<li>Wolves are solitary hunters, at least on this imaginary island!</li>
+<li>Wolves have a 10% probability of finding and killing any sheep within 500 m of its location in any given day.</li>
+<li>Wolves tend to move approximately 500 m per day on average.</li>
+<li>Wolves can kill a maximum of one sheep a day.</li>
+</ul>
+</div>
+<div id="grass" class="section level4">
+<h4>Grass</h4>
+<ul>
+<li>The experimental enclosure is one large grassy pasture. For the purposes of this exercise, we will this pasture into a grid of approximately 100 units. Each unit starts off with 10 units of grass (enough to support 50 sheep for a day).</li>
+<li>Each grass unit can have a maximum of 15 units of grass.</li>
+<li>Each unit can grow approximately 0.05 units of grass per day.</li>
+</ul>
+</div>
+</div>
+<div id="in-class-exercise" class="section level3">
+<h3>In-class exercise:</h3>
+<p>First, go to InsightMaker and load up the demo individual-based model! <a href="https://insightmaker.com/insight/74158/ICE-Individual-based-model">Here is the link!</a>.</p>
+<ol style="list-style-type: decimal">
+<li><p>Make sure you can run the model and interpret the figures.</p></li>
+<li>Try to adjust the number of sheep and wolves to meet your management goals:
+<ul>
+<li>Maintain populations of both sheep and wolves</li>
+<li>Maintain lush grass!</li>
+</ul></li>
+<li><p>Does the model behave realistically? Test it! What happens if you start with lots of sheep and no wolves? What happens if you start with no sheep, and a bunch of wolves?</p></li>
+<li><p>Is it possible for the experimental plot to support sheep, wolves, and grass indefinitely?</p></li>
+<li><p>What if wolves were more efficient at killing sheep? Try doubling the “Prob of kill” variable and see how your answer changes.</p></li>
+<li><p>What if grass were more productive? Try doubling the “Grass Growth Rate” and see if more sheep can be supported sustainably.</p></li>
+<li><p>What if the wolves don’t actually kill the sheep, but just scare them (make them move)?? Does the presence of wolves affect grass growth in this case?</p></li>
 </ol>
-<p>To do this, define your <em>Births per Capita</em> using the following syntax:</p>
-<pre><code>If [Pigeons]&lt;[Allee threshold] Then
-  [Max fecundity]-[Density dependence on fecundity]*([Allee threshold]-[Pigeons])
-Else
-  [Max fecundity]-[Density dependence on fecundity]*([Pigeons]-[Allee threshold])
-End If</code></pre>
-<p>Similarly, define your <em>Deaths per capita</em> using the following syntax:</p>
-<pre><code>If [Pigeons]&lt;[Allee threshold] Then
-  [Min mortality]+[Density dependence on survival]*([Allee threshold]-[Pigeons])
-Else
-  [Min mortality]+[Density dependence on survival]*([Pigeons]-[Allee threshold])
-End If</code></pre>
-<ol start="5" style="list-style-type: decimal">
-<li>If we are running out of time in class (which we probably will be!), load the model (and clone it!) using <a href="https://insightmaker.com/insight/71147/Allee-Effect-1#">this link</a>!</li>
-</ol>
-<p>Now you can try to answer the following questions:</p>
-<p><strong>Q</strong>: What is the carrying capacity (K) for this population?</p>
-<p><strong>Q</strong>: Carrying capacity (K) represents one equilibrium point in this model. Try to find another equilibrium point- that is, a point where the population neither grows nor declines.</p>
-<p><strong>Q</strong>: is this equilibrium a <em>stable equilibrium</em> or an <em>unstable equilibrium</em>?</p>
-<p><strong>Q</strong>: if you plot birth and death rates as a function of density in this model, can you identify the two equilibria?</p>
-<p><strong>Q:</strong> Why do Allee effects generally spell bad news for wildlife conservation and management?</p>
-<p>And just for fun, here is an article about <a href="http://www.audubon.org/magazine/may-june-2014/why-passenger-pigeon-went-extinct">the passenger pigeon and its possible “de-extinction”</a></p>
-<p><strong>Q:</strong> Do you support bringing back the passenger pigeon? Why or why not??</p>
-<p><a href="LECTURE6.html">–go to next lecture–</a></p>
+<p><strong>Q</strong>: is there any stochasticity in this model? If so, what kind of stochasticity is there? Take an educated guess!</p>
+<p><a href="LECTURE11.html">–go to next lecture–</a></p>
+</div>
 </div>
 
 
